--- a/1ProyectoP3/Encomiendas.resx
+++ b/1ProyectoP3/Encomiendas.resx
@@ -117,4 +117,103 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="panel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAABIlSURBVHhe7d0J9H1fOcfxn1CIIpEMlamUoVKKTI0SITTI
+        WCqKpElEhOaUZguFUspYMmSmRBrICpUhikbKTObhef37P2vtddZzz3Dvufee+/2ez1rv9ft97xnuufvs
+        s/ezn+fZ+1xYtWrVqlWrVq1atWrVqpPQJYJPCG4X3Cu4b/AlwacGlwpWnVF9bPCU4K+D/9vAPwfPDm4a
+        rDojer/gqcH/BNVN38QvBVcLVp2wrhn8ZVDd4DH8Y3CLYNUJSj//L0F1Y6eg5WAvrDohXTF4Y1Dd0Jbv
+        De7X+azi7cF1glUnol8IqhuZ/EXwVcEVgvcMvih4cVDtm7wmuGSwauG6WVDdwORVwWWDrgwPfyaojknu
+        GaxauH4zqG5e8nkBGRZ+fnCt4NN8EPqwoDom+ZvgXYJVC9UHBEPDvQ8JiE/AE33DQKvwncEzgv8KquOS
+        GwWrFqo7BdVNa7l6QLx/XxeoANV+m3hMsGqh+q6gumkt3xCk3i34mKDPO9jlecGqhUoTXt20ln8IPiVo
+        pV+/dTCmIvx+sKvW0cSe9Nygumld/iP4weDDg1YfEdhWHZMYDu6iWwV/G+hKVlfzzHpyUN20TTACrx3c
+        JUg9J6j2TV4UbKv3Dt4UtOf7jYAfYm0VZtB3BG3hduHb/+VARfmnIEcBtn1kQN8ddI9r+algW/1AUJ0T
+        up+HB4aiq7bUZwZV4SavDVIMxqwA/xm8b0BucHVscp9gG90kqM7X5X8DkcgvCFafw0RpRj3lVcEmaQC+
+        c3DVQD+sEhA/wtDxXbthjN4j4H6uzteHeAb/RPouVm0QN664P31fUBVm8qdBVaBagF8LqmOS3wq2EYOv
+        Ot9Y/jv42eCzA7911cXyxH5L8LrgZT4IfWDwr0FVkImh4GMDTiEBIf9/c1Dt2/LJwVRdP5iajNKH/IYH
+        BCKe51LvFAj4/GTQddvqN+n+Qfv5JlojcIgfCaZKl/RHQXW+XfHb2SufESiTM6/LB2L3fxZUBYI/CYR3
+        FciQMYeXB7/e+azCfvrxqRoalcwF34SyyW7wTOnTg2cGQw6axI1XAS4d/OLFn+3Cq4MPDqZKtNHoojrn
+        vlBGzwrSqD1ZvU+geRalq37oEA8KiMHk/4ZW1X5D8Bm4lqkywnhpUJ3zUKi4ynCb6z+aPil4WiAFq/pR
+        U3h6kM32jYNfDar9KhhaXxpsK3MNqvMeg38LlKmyXaQuE3xN8Iqg+gG78IdBevjo4wJ5gIaCXctcPyp9
+        XMKIJ5h45XQ/U8b+9p2jAu8DZayslfnRJcmSS3aOzN0+3AzuXcPDVu8aGEr5/N190Eiz+Yjg3wPn4K8f
+        Y2nbx77da9gGw1pDXDOWVCrGLSOPbSGgxK0sQ6k6dghlruwPnujKMBN4+d2gurB9wpnC0eMJ8MPbp0BX
+        cd1Agb8wqLKCJJEOyT7d46by84Gb3JUK0HUNa6mUZzfANAX34s6Be7M3edKeFAy5WQ+NSjGUApZwHn1Q
+        sEm27fL7/j7g6UuJUgoO/UGQraRuS9BIJVHZMrlVBe4LNI3BtbtHnGuzSxh0aTd/G2QNbxJXbXXMGNgk
+        mRvwocFPBNV+Xd4WfH2QNgurf9sRD9wj92ovelhQfempIXbf1e2Dat8xvCFIPwOvnpag2q8P0cO8cbqx
+        ap8xPDTYm94/WKp1PAWGV4aOiYdyW2NMk57xBc2/LqnaD8qur7uSqpb9+I8F1T59iJ/s3ZP4uKD68lPC
+        DKJ2TO3/LwmqfYd4YkCCUhJUqn0gUCV5lVMrRyYVprYTm2soINZFQGzv0tSNdekuCX2tkK6bkBLoadO4
+        bFOI9q3O0cWNTINrk5NKf27U0kpL2he2zokvDw6q7RXuSZ+BO6um5u0dC4XPFXzboHujVYa3Xky3Ylhl
+        xDGO7TPIMrrIS1ltxw8FJH8BH3/RXxcuXC7Y9IRzn9OVgmp7xfcHBxOnRl9fd2y4gb89uHKQeq/AeLuv
+        qbfNPvZNOYeI4F8F3f2/MCA3ubstSYNTny6TSdq7ZW2kpTEeq2OQFUUUs9re4l5sk+W0k9T+6mKOhSbQ
+        0OvmQZtxw0CTPj7FW2lfN7Wde+Cczu07sgvU/PMcakW650juGJChnmsZM+8BKjA9Mqi2tzjnwfXRwS7j
+        1bmQrOGJYsmn9LGCOaJp1TFT+OPATCRZRynfdfd3/Pciq7s6LmlnIalEPHZjvH4/GtA9gmp74h64F0fR
+        UP79vrAQFDvkE4MUR8pnBazojOFzinxT4GZNxZzDtrswfPN7bxmk04bMTM59NvGowBS2lOOlhFX7JtzZ
+        pJuptic5ajiK+N6ri9oXJnR8ZcCnnuJ1Yy1X/SnH1S4SeeyeEzJ93UDi86/26WIm0TUCrVOqbxZU5keq
+        1NX25OirnvBgVRc2Fxw0nqCcEUysdJ47Q6m+bkgFJU/u8yfCj0+b0te0CKKRrPlqe0v6B9gUchy+NiB2
+        QXffJF3WXxFU2yFb6uiyMEN1cbvAu2aJGM2fQk5ZMezxgaepOq5FljF5QqrtQzC+SEi52o70/fdZ8+Yq
+        Ej9BjgI40+ibg+oYGHnQE4JqO4SZFyH9VXWBUzHr51uDNudftOyuwdTw86MD4hvvbvudgM9e3t0mVDa6
+        XtA9PmHQ0fcE1XZkCFrOgiGlLCVePqMH11Edg2zaN01GsYrKYjQ0nasP3jRJkFb2bBM2tCw/HGwbe7hB
+        QKz47jZOkzHJIWS/1wfdc+BXAuqrJAJD2RWlGIF9wzuuatLtVdthSLooTX1CxcgNcfShKePqbwykhlfH
+        jIWR5sYxuqrtkBvA5duHqBxtin9wwGS6Wl8KO3tBqFkLoNUYmmJmDiKJ7Vfb00BclEzoqC62xbDMtC8L
+        QKY8DZ8TsIjHJnYMkQEa3Um1fSzpku2zc1w3iZG8Jaj2SbSUQ1G+dC9zTW/ytloYa3HyxL0yqC6YjcCa
+        bSdmMI4M03ZJhdpELgIlvFptn4JmmAOn7+amS1hUcWoEr8UEl/QXyCSq9uH4Gtt9HVwMnLxQBaafa1fQ
+        kLhpH8OsXb2IVZMNwzatiieSi7baZwoydEhSarUdHFMcQuTfKm4wBNdzG7AiZacM28pnYazFSsHzu8t4
+        bZMfBTZYyvrd9kdvyx2CJUkiiJuUhie7xiikL+6fsHdyPqTy8+Qb+mWFImWZWcT2OQlJb+LwGBPNmgKn
+        CkeQiJ1x9RRyaCdlvP08vXOa+/bzMbjZmmRPvSDRV1/8N4kf+JudoOn+u4DPgIuZgXezIB8U19BdHvf3
+        AmW4txy/fSorwBz9cIshI/HVV9v70FTrY43D2y5IMMVN63PobCKjdu1IwW+2RP2Yvlpl5MquopUeHskk
+        J1MBsgtgpbYevDm7gNsEtO3kjcy2sVCEv/kJSGCpu+8YzFyiaqQgDYzPgd0jaeSjAmXBv28IzI/QnXzK
+        b6B1SFc0KUtlqmwX3QUwUPKHbDICvyx4QdD+6LGYIydpUgh224QUziUSQvZ3ZtGOWaByE5apGRop9KE1
+        UqFVlHaGk7JzXe3ah18cLFKau00LKRgGMtzaYSAHCoNnzKoeyU8HxJlSbR+DJ8wTxSnj7/TSbbP+T2Ix
+        Cxpa2qaLIbAKmPECUkbKKluoLosdBmqiqgtuqRxBjCDNMk/Z0FP95QENvUtgCA4ZskIJaW6r/cbCC0ri
+        C9X2Fs4uRuHnBm1zzp2sbMZMvjEiWJymuoLNcu26ggVMRMjM8u3ur69kDAkO7bpog2QSyozeKdm3m7hK
+        oGVh6Vfb+SckpzBAU367kDC3eHXMJhbnChaYqC50DFUwyL+8edyi+n37yTug1tm0LRxE7dM3R+rYvQMy
+        PT0/E8hic1ghJeW3+a1Svsb4CTahtVmMhl7wMBb9MP99u5yLYZLESit1kcKsUrimkqtu8ClU26eSbyYT
+        gPK37qp9q4nf5LftYmu0MKQXIUkJ1QXugoQQyZTdhJBTk2v3G/yW7mIWc8ARdXTNsYhTH4ZAUsKMoVul
+        vZDZs3IDZd0knkTSJLefjyGnjfH/52dW8CJL0udnJo4IGXdn5LhW1zxm6fpdYAwfVYdOCjU00h20CyGY
+        EKEZ17dmEEbKmNGFbd1zjIHTitqUrZzgwXkj3+AhQTsZwzW5tt8O2nPtm6MmhUpJri5q34gH8LClXZCS
+        yiWZMqdJSS6pjh+Cb4JjhyPG3wzRXLuQwdsakK7B9/VNDN0nElGOIk3sriHdOeCKFbJtp3vnaMI4vzpm
+        DNm/GrML6LTyXb7Td1fHHhL3oM2YPpikN1cXdCwMqWTbiLBlBaBtcgsldRhutnJOQy/fsbTZ0enePpgs
+        vbatL/4QyC7+tmBqdjEHi6e9XXzKOZzLOatjlgDvIiP4YJrq8z4WOb+A5d4OJ3N+Aa8dg9H/zQJKycxx
+        jBHOPoZv+8DaiQeRIc/SmsAxmGEkS6ftL+UGGEGk2DX22Xa5mGOiCzQ03rt2fXHCEjDHsJ1Y6v8+q/Y9
+        Jfgt9ipx+F2yXpeCWEC7mJL/S+6s9j0l3Jt2mvzs4vyovvjUqJIq2mSWU0Zkcy9iRc+V1XtM5B2QUDDv
+        HXLxh58LqmNOCfeoDULNJnFslqbEyuqLTwHJFhlp5EHTXCITQ2w7lkdvDtwb96jNOZhd0rGNp+fO9j0E
+        rpty1Y2sAP6fufl3C9pjTgH3gv+iXdzqIOIHN6PlFFYPNRuJN08eQOYhthXAZzKO7LNt0uohYfDJEpZK
+        dnQpOOldm+YGHhsVNGfxtku6tRUACpTsm5lIS0NSqDkRi50rIEFEKtcu6U5zk7H8btJmtwJALIG2jSTu
+        A2VpZZHFrAgyRgrWUm2WUa9+1KHg3xe+Fc61bEy7raoAfP5GBo6Zmug6N8rOgpJtpHPxMs2qTXnWp1rw
+        wAKLh34Fm+9LHz9/f3d7VQGQa/g49hjX/OOBMsuoprJUpkdbD3CKrKPnh8jOEUVr/dPG27JsDhVZy1fP
+        WaGzCupsqgD2zZm+c6SMj0GZmGDSLkip7B4Y5BI1ynbxygqQCFVapk0mTdZo2TayaM302VdY2eoeonqC
+        PZvSvjdVADjesdj23YdD+O3KwEQVZULKyN/KrLtiyklWgJY/D0yOaBdL5Hwxw3abmbmb8ARnYmef+7qv
+        AiDdqlqDOcPCnmhPdptMqkyUjTKqjsHJV4BEOFk2by7lQvo5U8TmSKHOPtwiC33rDg1VAMfmmgKVDTEF
+        v8lva99pSMpgbJbRmakALaZnm6nbThEzzcqkyW1m25p4wYqXFTy0OMVQBYBFGtww59zGdvEbtEJ+U8pv
+        NZOoWsKujzNZARKOF7ltaXyRLB7rAQwtCdti2hVpTqvtLWMqAPgEiI+g2t7FtZo34NrbTCTGqN+4rZPp
+        TFeAFpMlrS7S5ubxzpls0Re3T0+e+fpjCnlsBXCuypPYxbW5xtyX/Aa/ZeoE0IpzUwGS6vWorHKx+xcG
+        7b7m2qcvf+xcxbEVAM7p3G0sod3mmtr0MpNmnhJMeVHFEOeuArTwynVfjyqHj3Fm0YdcPNHTVh1fMaUC
+        IF/+JJroOxmbOQWNXNs+X6t7ritAIqZvDZ323bz55HnJ0pR4/tQK4NyZat4+7a7FNY1Z3GEX1grQQSKn
+        adiyezlSpq4cMrUCwFBOV+A7ffchk0lPogJw7DDG5uz7hpDbv80iD9tUAPiuTSuB7ANlqUwzm+kkNOY1
+        bcdm2wpwKCwb332N3Ulq6hs5D8USK4Ay6r7I8syI4TTmjZyHYikVgJvYGkjdN5yeafW9kfNQHLsCVG84
+        PXdivXffyHkojlEB/MbqDaerQm6GIMmhkksPWQEkc3bfcLqqRyZscqXucyLKviuAa+++4XTVREnmvFOw
+        D4fLviqAa+2+4XTVDJp7/v6cFaB6w+mqPUmM3QoeXL+7ZA/tWgF8t2s49QUtT1q7rOGzbQXwXd03nK46
+        sgRoZOxMWYR5SgVwzuoNp6sWqLHLsI+pANUbTledkPJFDFWewKYKUL3YYtWJK1/F0qaSdSuAbd03nK46
+        g8o3clpKBd2XW61atWrVqlWrxsubMa2wfd7xYol8H9G5kXTstKRX3mFUnivxjIl+PWDlojmJ5zrDZ9U5
+        khkxFoKaG5kzcz1FnDqmjembT42ub8Ls4mq/o6WXmSVT9YFzYM7fHFKhqvOfAlYLSVk7qNonOcoSchY9
+        4F6dG6+Yb5dz30UWhbb4kuzbU8OTnWJnmRxb7ecFVqaqrVq1atWqVatWrVq1alWvLlz4fxx1xVvitP+n
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="panel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAHQSURBVHhe7dbBqhNBGITRrFVQH0zRlxfxZXRm9YPUhYZ0
+        LnRxDnzbNEVmkn4AAAAAAAAAAAAAAAAAAPznr57qeGmU1jteGqX1jpdGab3jpVFa73hplNY7Xhql9Y6X
+        Rmm946VRWu94aZTWO14apfWOl0ZpveOlUVrveGmU1jteGqX1jpdGab3jpVFa73hplNY7Xhql9Y6XRmk9
+        AIAK6aKjqV4araleGq2pXhqtqV4araleGq2pXhqtqV4araleGr27X1ffrj5cPevj1fer31fprN3VS6N3
+        dn/5n692+3L1Hg9BvTR6Z/eb/yo/rtKZO6uXRu9sx8/+Wz5dpTN3Vi+N3tn9n/0qHoAN0uid3Re2V/l5
+        lc7cWb00emf3Re2+sO329erPVTpzZ/XS6N3dD8F9Ybt/sp91f8b95r/Hl39XL43WVC+N1lQvjdZUL43W
+        VC+N1lQvjdZUL43WVC+N1lQvjdZUL43WVC+N1lQvjdZUL43WVC+N1lQvjdZUL43WVC+N1lQvjdZUL43W
+        VC+N1lQvjdZUL43WVC+N1lQvjdZUL43WVC+N1lQvjdZUL43WVC+N1lQvjdZUL43WVC+N1gQAAAAAAAAA
+        AAAAAAAA8IbH4x/tJPvdDVXsYQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
